fix font sizes on mobile

--- a/css/dbx.css
+++ b/css/dbx.css
@@ -65,7 +65,11 @@ footer {
 
 .col-md-3 h2, .col-md-4 h1, .col-md-4 h2, .col-md-4 h3, .post-content h2, .btn,  .post-title, .nav li { 
     text-transform: uppercase; 
-    font-family: "Flaticon", sans-serif
+    font-family: "Flaticon", sans-serif;			 
+}
+
+h1, h2, h3 {
+    font-size: 24px;
 }
 
 .panel {
